--- a/influencer.css
+++ b/influencer.css
@@ -76,7 +76,7 @@ background-position: bottom;
  align-items: center;
  gap: 3rem;
  margin-top: 5rem;
- height:60vh;
+ height:90vh;
 
  
 }
@@ -84,6 +84,45 @@ background-position: bottom;
   width: 90%;
 
 }
+.populur-title{
+ text-align: center;
+ margin-top: 50px;
+ font-size: 24px;
+}
+.img-container{
+display: grid;
+grid-template-columns: repeat(3,1fr);
+text-align: center;
+margin-bottom: px;
+gap: 20px;
+}
+.img-card{
+ margin-top: 16px;
+border: 2px solid blue;
+border-radius: 10px;
+background-color: rgb(253, 253, 247);
+}
+.img-card img{
+margin-top: 10px;
+
+}
+.see-more{
+margin-top: 20px;
+ width: 100%;
+ display: flex;
+ justify-content: end;
+ font-size: 24px;
+ color: brown;
+}
+
+
+
+
+
+
+
+
+
 /* resposive with mobile device */
 
 @media screen and (max-width:576px) {
@@ -93,16 +132,26 @@ background-position: bottom;
                   padding: 0;
                   margin: 0;
                   }
+                .img-container{ 
+                  grid-template-columns: repeat(1,1fr);
+                }
+
                   
 }
+/* responsive with mediuam device */
+
 @media screen and (min-width:576px) and (max-width:960px)
  {
                   nav, .influencer-container,
                   .sponsor-container{
-                  flex-direction: column;
+                  flex-direction: column-reverse;
                   padding: 3rm;
                   margin: 3rm;
-                  }            
+                  }  
+                  .img-container{ 
+                    grid-template-columns: repeat(2,1fr);
+                  }
+            
                   
 }
 
