--- a/influencer.css
+++ b/influencer.css
@@ -127,6 +127,17 @@ margin-top: 20px;
   margin-right: 2rem;
   margin-bottom: 2rem;
 }
+.footer{
+  background-color: black;
+  height: 30vh;
+  width: 100%;
+}
+.footer-content{
+  padding: 40px;
+  text-align: center;
+  font-size: 1rem;
+  color: #FFF;
+}
 
 
 
@@ -142,10 +153,11 @@ margin-top: 20px;
 @media screen and (max-width:576px) {
                   nav, .influencer-container,
                   .sponsor-container,
-                  .feature-container{
+                  .feature-container,
+                  .footer{
                   flex-direction: column;
-                  padding: 0;
-                  margin: 0;
+                  padding:0 px;
+                  margin: 0px;
                   }
                 .img-container{ 
                   grid-template-columns: repeat(1,1fr);
@@ -167,6 +179,12 @@ margin-top: 20px;
                   .img-container{ 
                     grid-template-columns: repeat(2,1fr);
                   }
+                   .footer,.footer-content{
+                    width: 100%;
+                    height: 50vh;
+                    padding:5px;
+                    
+                   }
             
                   
 }
